--- a/migration-client/wso2-api-migration-client/pom.xml
+++ b/migration-client/wso2-api-migration-client/pom.xml
@@ -208,9 +208,9 @@
     </dependencies>
 
     <properties>
-        <carbon.apimgt.version>9.18.24</carbon.apimgt.version>
-        <carbon.governance.version>4.8.26</carbon.governance.version>
-        <carbon.kernel.version>4.6.2</carbon.kernel.version>
+        <carbon.apimgt.version>9.20.12</carbon.apimgt.version>
+        <carbon.governance.version>4.8.28</carbon.governance.version>
+        <carbon.kernel.version>4.6.3-beta</carbon.kernel.version>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
     </properties>
 </project>
