fix migration errors

--- a/components/migration-client/wso2-api-migration-client/pom.xml
+++ b/components/migration-client/wso2-api-migration-client/pom.xml
@@ -72,6 +72,24 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <executable>bash</executable>
+                    <workingDirectory>src/main/resources</workingDirectory>
+                    <commandlineArgs>build-migration-script.sh</commandlineArgs>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-scr-plugin</artifactId>
                 <version>1.7.2</version>
@@ -91,24 +109,6 @@
                 <configuration>
                     <source>8</source>
                     <target>8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <executable>bash</executable>
-                    <workingDirectory>src/main/resources</workingDirectory>
-                    <commandlineArgs>build-migration-script.sh</commandlineArgs>
                 </configuration>
             </plugin>
             <plugin>
