--- a/pom.xml
+++ b/pom.xml
@@ -103,9 +103,9 @@
     </build>
 
     <properties>
-        <carbon.apimgt.version>9.20.30</carbon.apimgt.version>
+        <carbon.apimgt.version>9.20.74</carbon.apimgt.version>
         <carbon.governance.version>4.8.28</carbon.governance.version>
-        <carbon.kernel.version>4.6.3-beta</carbon.kernel.version>
+        <carbon.kernel.version>4.6.3</carbon.kernel.version>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
         <junit.version>4.12</junit.version>
         <powermock.version>1.7.4</powermock.version>
