--- a/components/migration-client/wso2-api-migration-client/pom.xml
+++ b/components/migration-client/wso2-api-migration-client/pom.xml
@@ -232,6 +232,16 @@
             <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.apimgt</groupId>
+            <artifactId>org.wso2.carbon.apimgt.persistence</artifactId>
+            <version>9.20.75-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
     </dependencies>
 </project>
