--- a/components/migration-client/wso2-api-migration-client/pom.xml
+++ b/components/migration-client/wso2-api-migration-client/pom.xml
@@ -242,6 +242,11 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.apimgt</groupId>
+            <artifactId>org.wso2.carbon.apimgt.rest.api.common</artifactId>
+            <version>9.20.75-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 </project>
