--- a/apim-migration-testing-tool-rest-assured/pom.xml
+++ b/apim-migration-testing-tool-rest-assured/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.6.1</version>
+			<version>6.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tika</groupId>
@@ -39,6 +39,21 @@
 		    <artifactId>json-simple</artifactId>
 		    <version>1.1.1</version>
 		</dependency>
+		
+		 <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+<groupId>org.apache.poi</groupId>
+<artifactId>poi</artifactId>
+<version>4.1.1</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+<groupId>org.apache.poi</groupId>
+<artifactId>poi-ooxml</artifactId>
+<version>4.1.1</version>
+</dependency>
+
  </dependencies>
 	
 	<repositories>
