Add user and Admin tests

--- a/apim-migration-testing-tool-rest-assured/src/test/resources/config.properties
+++ b/apim-migration-testing-tool-rest-assured/src/test/resources/config.properties
@@ -6,9 +6,9 @@ adminpassword=admin
 base_url = https://localhost:9443
 
 #For Apim 3.2.0
-publisher_url_3_2 = /api/am/publisher/v1
+publisher_url_3_2 = api/am/publisher/v1
 devportal_url_3_2 = /api/am/store/v1
-admin_url_3_2 = /api/am/admin/v1
+admin_url_3_2 = api/am/admin/v1
 gateway_url_3_2 = /api/am/gateway/v1
 
 #For Apim 4.1.0
