Add v320 to v420 test scenarios

--- a/apim-migration-testing-tool-rest-assured/src/test/resources/config.properties
+++ b/apim-migration-testing-tool-rest-assured/src/test/resources/config.properties
@@ -17,3 +17,9 @@ devportal_url_4_1 = /api/am/store/v3
 admin_url_4_1 = /api/am/admin/v3
 gateway_url_4_1 = /api/am/gateway/v3
 
+#For Apim 4.2.0
+publisher_url_4_2 = api/am/publisher/v4
+devportal_url_4_2 = api/am/store/v4
+admin_url_4_2 = api/am/admin/v4
+gateway_url_4_2 = api/am/gateway/v4
+
